--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Nicolas Burra Website # Website name
+title: Nicolas Burra  # Website name
 baseurl: 'nicoburra.com' # Website URL
 copyright: '© {year} Me' # Footer text, e.g. '© {year} Me'
 
